--- a/_posts/2023-09-10-hello copy 2.md
+++ b/_posts/2023-09-10-hello copy 2.md
@@ -3,8 +3,8 @@ toc: true
 comments: true
 layout: post
 title: Midnight Stalker Animation
-description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.
-courses: { compsci: {week: 1} }
+description:  This is level _____ in our came mode for our game. This is the how they look separately.
+courses: { gameparts: {week: 1} }
 type: hacks
 ---
 
