--- a/_posts/2020-10-10-Box.md
+++ b/_posts/2020-10-10-Box.md
@@ -10,15 +10,17 @@ type: hacks
 <body>
     <div>
         <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
-            <img id="characterSprite" src="/BoxGame/images/unnamed.jpg">  // change sprite here
+            <img id="boxSprite" src="/BoxGame/images/unnamed.jpg">  // change sprite here
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
-            <input type="radio" name="animation" id="forward" checked>
-            <label for="forward">Forward</label><br>
-            <input type="radio" name="animation" id="left">
-            <label for="left">Left</label><br>
-            <input type="radio" name="animation" id="right">
-            <label for="right">Right</label><br>
+            <input type="squished" name="animation" id="squished" checked>
+            <label for="squished">Squished</label><br>
+            <input type="jumps" name="animation" id="jumps">
+            <label for="jumps">Jumps</label><br>
+            <input type="half open" name="animation" id="half open">
+            <label for="half open">Half Open</label><br>
+            <input type="fully open" name="animation" id="fully open">
+            <label for="fully open">fully Open</label><br>
         </div>
     </div>
 </body>
@@ -40,7 +42,7 @@ type: hacks
 
         class Character {
             constructor() {
-                this.image = document.getElementById("characterSprite");
+                this.image = document.getElementById("boxSprite");
                 this.x = 0;
                 this.y = 0;
                 this.minFrame = 0;
