--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -15,13 +15,13 @@ type: hacks
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
             <input type="radio" name="animation" id="A">
-            <label for="idle">A</label><br>
+            <label for="A">A</label><br>
             <input type="radio" name="animation" id="B">
-            <label for="barking">B</label><br>
+            <label for="B">B</label><br>
             <input type="radio" name="animation" id="C">
-            <label for="walking">C</label><br>
+            <label for="C">C</label><br>
             <input type="radio" name="animation" id="D">
-            <label for="talking">D</label><br>
+            <label for="D">D</label><br>
         </div>
     </div>
 </body>
@@ -38,7 +38,7 @@ type: hacks
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
-                frameLimit: 4,
+                frameLimit: 8,
                 x: 18, // X position for 'idle' animation
                 y: -1, // Y position for 'idle' animation
             },
@@ -48,12 +48,12 @@ type: hacks
                 y: 2, // Y position for 'barking' animation
             },
             'C': {
-                frameLimit: 6,
+                frameLimit: 8,
                 x: 18, // X position for 'walking' animation
                 y: -1, // Y position for 'walking' animation
             },
             'D': {
-                frameLimit: 5,
+                frameLimit: 8,
                 x: 18, // X position for 'walking' animation
                 y: -1, // Y position for 'walking' animation
             }
