box animation size issue fixed

--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -2,7 +2,7 @@
 toc: true
 comments: true
 layout: post
-title: Box Animation
+title: Box Animation w/ more issues
 description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.
 courses: { compsci: {week: 1} }
 type: hacks
@@ -32,30 +32,30 @@ type: hacks
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
         const SPRITE_WIDTH = 71.75;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 96.5; // matches sprite pixel height
+        const SPRITE_HEIGHT = 90.5; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 3; // 3 frames per second
+        const DESIRED_FRAME_RATE = 10; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
-                frameLimit: 8,
-                x: 18, // X position for 'idle' animation
-                y: -1, // Y position for 'idle' animation
+                frameLimit: 7,
+                x: 1, // X position for 'idle' animation
+                y: 10, // Y position for 'idle' animation
             },
             'B': {
-                frameLimit: 4,
-                x: 18, // X position for 'barking' animation
-                y: 2, // Y position for 'barking' animation
+                frameLimit: 7,
+                x: 1, // X position for 'barking' animation
+                y: 30, // Y position for 'barking' animation
             },
             'C': {
-                frameLimit: 8,
-                x: 18, // X position for 'walking' animation
-                y: -1, // Y position for 'walking' animation
+                frameLimit: 7,
+                x: 1, // X position for 'walking' animation
+                y: 10, // Y position for 'walking' animation
             },
             'D': {
-                frameLimit: 8,
-                x: 18, // X position for 'walking' animation
-                y: -1, // Y position for 'walking' animation
+                frameLimit: 7,
+                x: 1, // X position for 'walking' animation
+                y: 10, // Y position for 'walking' animation
             }
         };
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
@@ -118,8 +118,8 @@ type: hacks
                 const selectedAnimation = event.target.id;
                 const animationInfo = animationData[selectedAnimation];
                 if (animationInfo) {
-                    Iceman.setFrameLimit(animationInfo.frameLimit);
-                    Iceman.setPosition(animationInfo.x, animationInfo.y);
+                    iceman.setFrameLimit(animationInfo.frameLimit);
+                    iceman.setPosition(animationInfo.x, animationInfo.y);
                 }
                 switch (selectedAnimation) {
                     case 'A':
@@ -137,7 +137,7 @@ type: hacks
                 }
             }
         });
-        let lastTimestamp = 0;
+        let lastTimestamp = 1;
         // Animation recursive control function
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
