--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -2,7 +2,7 @@
 toc: true
 comments: true
 layout: post
-title: Box Animation w/ more issues
+title: Box Animation
 description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.
 courses: { compsci: {week: 1} }
 type: hacks
@@ -18,10 +18,6 @@ type: hacks
             <label for="A">A</label><br>
             <input type="radio" name="animation" id="B">
             <label for="B">B</label><br>
-            <input type="radio" name="animation" id="C">
-            <label for="C">C</label><br>
-            <input type="radio" name="animation" id="D">
-            <label for="D">D</label><br>
         </div>
     </div>
 </body>
@@ -32,7 +28,7 @@ type: hacks
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
         const SPRITE_WIDTH = 71.75;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 90.5; // matches sprite pixel height
+        const SPRITE_HEIGHT = 80.5; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
         const DESIRED_FRAME_RATE = 10; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
@@ -40,12 +36,12 @@ type: hacks
             'A': {
                 frameLimit: 7,
                 x: 1, // X position for 'idle' animation
-                y: 10, // Y position for 'idle' animation
+                y: -20, // Y position for 'idle' animation
             },
             'B': {
                 frameLimit: 7,
                 x: 1, // X position for 'barking' animation
-                y: 30, // Y position for 'barking' animation
+                y: -20, // Y position for 'barking' animation
             },
             'C': {
                 frameLimit: 7,
@@ -61,7 +57,7 @@ type: hacks
 
         class Iceman {
             constructor() {
-                this.image = document.getElementById("Iceman");
+                this.image = document.getElementById("box");
                 this.spriteWidth = SPRITE_WIDTH;
                 this.spriteHeight = SPRITE_HEIGHT;
                 this.width = this.spriteWidth;
@@ -125,12 +121,6 @@ type: hacks
                         break;
                     case 'B':
                         iceman.frameY = 1;
-                        break;
-                    case 'C':
-                        iceman.frameY = 2;
-                        break;
-                    case 'D':
-                        iceman.frameY = 3;
                         break;
                 }
             }
