--- a/_posts/2023-09-10-test.md
+++ b/_posts/2023-09-10-test.md
@@ -31,133 +31,147 @@ type: hacks
 </body>
 
 <script>
-    const canvas = document.getElementById('spriteContainer');
-    const ctx = canvas.getContext('2d');
-    /* Toggle "canvas filter propery" 
-    * look in _sass/minima/dark-mode.scss
-    */
-    var isFilterEnabled = true;
-    const defaultFilter = getComputedStyle(document.documentElement).getPropertyValue('--default-canvas-filter');
-    toggleCanvasEffect.addEventListener("click", function () {
-        if (isFilterEnabled) {
-            canvas.style.filter = "none";  // remove filter
-        } else {
-            canvas.style.filter = defaultFilter; // Apply the default filter value
-        }
-
-        isFilterEnabled = !isFilterEnabled;  // switch boolean value
-    });
     // start on page load
     window.addEventListener('load', function () {
-        const SPRITE_WIDTH = 120;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 114; // matches sprite pixel height
-        const FRAME_LIMIT = 5;  // matches number of frames per sprite row, this code assume each row is same
-
-        const SCALE_FACTOR = 1;  // control size of sprite on canvas
+        const canvas = document.getElementById('spriteContainer');
+        const ctx = canvas.getContext('2d');
+        const SPRITE_WIDTH = 90;  // matches sprite pixel width
+        const SPRITE_HEIGHT = 58; // matches sprite pixel height
+        const SCALE_FACTOR = 2;  // control size of sprite on canvas
+        const DESIRED_FRAME_RATE = 3; // 3 frames per second
+        const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
+        const animationData = {
+            'idle': {
+                frameLimit: 4,
+                x: 18, // X position for 'idle' animation
+                y: -1, // Y position for 'idle' animation
+            },
+            'barking': {
+                frameLimit: 4,
+                x: 18, // X position for 'barking' animation
+                y: 2, // Y position for 'barking' animation
+            },
+            'walking': {
+                frameLimit: 6,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            },
+            'leaping': {
+                frameLimit: 5,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            },
+            'sitting': {
+                frameLimit: 4,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            },
+            'sit command': {
+                frameLimit: 3,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            }
+        };
+          // number of frames per row, this code assumes each row is different
+        // const FRAME_RATE = 15;  // not used
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
-
-        // a class to store the differences in the animations to make it clear what the animation changes are for
-        class AnimationType{
-            constructor(initFrameX = 0, maxFrame = FRAME_LIMIT, animationDelay = 75){
-                this.maxFrame = maxFrame;
-                this.initFrameX = initFrameX;
-                this.animationDelay = animationDelay;
-            }
-        }
-
-        class Monkey {
+        class Husky {
             constructor() {
-                this.image = document.getElementById("monkeySprite");
+                this.image = document.getElementById("HuskySpriteSheet");
+                this.spriteWidth = SPRITE_WIDTH;
+                this.spriteHeight = SPRITE_HEIGHT;
+                this.width = this.spriteWidth;
+                this.height = this.spriteHeight;
                 this.x = 0;
                 this.y = 0;
+                this.scale = SCALE_FACTOR;
                 this.minFrame = 0;
-                this.animationType = new AnimationType();
-                this.frameX = 0;
                 this.frameY = 0;
+                this.frameX = 0;
+                this.maxFrame = 0;
             }
-
-            // draw Monkey object
+            setFrameLimit(limit) {
+                this.maxFrame = limit;
+            }
+            setPosition(x, y) {
+                this.x = x;
+                this.y = y;
+            }
+            // draw husky object
             draw(context) {
                 context.drawImage(
                     this.image,
-                    this.frameX * SPRITE_WIDTH,
-                    this.frameY * SPRITE_HEIGHT,
-                    SPRITE_WIDTH,
-                    SPRITE_HEIGHT,
+                    this.frameX * this.spriteWidth,
+                    this.frameY * this.spriteHeight,
+                    this.spriteWidth,
+                    this.spriteHeight,
                     this.x,
                     this.y,
-                    canvas.width,
-                    canvas.height
+                    this.width * this.scale,
+                    this.height * this.scale
                 );
             }
-
             // update frameX of object
             update() {
-                // this sprite sheet uses a variable number of frames for different animations
-                if (this.frameX < this.animationType.maxFrame) {
+                if (this.frameX < this.maxFrame) {
                     this.frameX++;
                 } else {
-                    // the start frame of the animations changes in this sprite sheet
-                    this.frameX = this.animationType.initFrameX;
+                    this.frameX = 0;
                 }
             }
         }
-
-        // Monkey object
-        const monkey = new Monkey();
-
-        // Make the animations that deviate from the default use a class 
-        // to make it more readible what the changes are doing
-        const jumpRightAnimation = new AnimationType(undefined, 7, undefined); // frames go from 0 to 7 but everything else is the same
-        const jumpLeftAnimation = new AnimationType(8, undefined, undefined); // frames go from 8 to 14 but everything else is the same
-
-        // update frameY of monkey object, action from radio controls
+        // husky object
+        const husky = new Husky();
+        // update frameY of husky object, action from idle, bark, walk, and other radio controls
         const controls = document.getElementById('controls');
         controls.addEventListener('click', function (event) {
             if (event.target.tagName === 'INPUT') {
                 const selectedAnimation = event.target.id;
+                const animationInfo = animationData[selectedAnimation];
+                if (animationInfo) {
+                    husky.setFrameLimit(animationInfo.frameLimit);
+                    husky.setPosition(animationInfo.x, animationInfo.y);
+                }
                 switch (selectedAnimation) {
-                    case 'walkRight':
-                        monkey.frameY = 0;
-                        monkey.animationType = new AnimationType();
+                    case 'idle':
+                        husky.frameY = 5;
                         break;
-                    case 'walkLeft':
-                        monkey.frameY = 1;
-                        monkey.animationType = new AnimationType();
+                    case 'barking':
+                        husky.frameY = 0;
                         break;
-                    case 'jumpRight':
-                        monkey.frameY = 2;
-                        monkey.animationType = jumpRightAnimation;
+                    case 'walking':
+                        husky.frameY = 1;
                         break;
-                    case 'jumpLeft':
-                        // this animation is on the same line as jumpRight
-                        monkey.frameY = 2;
-                        monkey.animationType = jumpLeftAnimation;
-                    default:
+                     case 'leaping':
+                        husky.frameY = 2;
+                        break;
+                     case 'sitting':
+                        husky.frameY = 3;
+                        break;
+                     case 'sit command':
+                        husky.frameY = 4;
                         break;
                 }
             }
         });
-
+        let lastTimestamp = 0;
         // Animation recursive control function
-        function animate() {
-            // Clears the canvas to remove the previous frame.
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Draws the current frame of the sprite.
-            monkey.draw(ctx);
-
-            // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
-            monkey.update();
-
-            // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
-            // ensuring smooth visuals.
-            requestAnimationFrame(function() {
-                setTimeout(animate, monkey.animationType.animationDelay); // Adjust the delay (in milliseconds) to control the frame rate.
-            });
+        function animate(timestamp) {
+            const deltaTime = timestamp - lastTimestamp;
+            if (deltaTime >= FRAME_INTERVAL) {
+                // Clears the canvas to remove the previous frame.
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                // Draws the current frame of the sprite.
+                husky.draw(ctx);
+                // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
+                husky.update();
+                // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
+                // ensuring smooth visuals.
+                lastTimestamp = timestamp;
+                }
+            requestAnimationFrame(animate);
         }
-
         // run 1st animate
         animate();
     });
