--- a/_posts/2023-10-11-TEST.SPRITE.md
+++ b/_posts/2023-10-11-TEST.SPRITE.md
@@ -12,7 +12,7 @@ type: hacks
 <body>
     <div>
         <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
-            <img id="ninjaSprite" src="{{site.baseurl}}/images/zombieGal.webp"> 
+            <img id="ninjaSprite" src="{{site.baseurl}}/images/ZombieGal.png"> 
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
             <input type="radio" name="animation" id="A" checked>
@@ -42,8 +42,8 @@ type: hacks
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
-        const SPRITE_WIDTH = 70;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 130; // matches sprite pixel height
+        const SPRITE_WIDTH = 40;  // matches sprite pixel width
+        const SPRITE_HEIGHT = 60; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
         const FRAME_LIMIT = 6;  // number of frames per row, this code assume each row is same
         // const FRAME_RATE = 15;  // not used
