--- a/_posts/2023-10-11-TEST.SPRITE.md
+++ b/_posts/2023-10-11-TEST.SPRITE.md
@@ -16,47 +16,62 @@ type: hacks
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
             <input type="radio" name="animation" id="A" checked>
-            <label for="idle">A</label><br>
+            <label for="A">A</label><br>
             <input type="radio" name="animation" id="B">
-            <label for="barking">B</label><br>
+            <label for="B">B</label><br>
             <input type="radio" name="animation" id="C">
-            <label for="walking">C</label><br>
-            <input type="radio" name="animation" id="D">
-            <label for="walking">D</label><br>
+            <label for="C">C</label><br>
+            <input type="radio" name="animation" id="D" checked>
+            <label for="D">D</label><br>
             <input type="radio" name="animation" id="E">
-            <label for="walking">E</label><br>
-            <input type="radio" name="animation" id="F">
-            <label for="walking">F</label><br>
-            <input type="radio" name="animation" id="G">
-            <label for="walking">G</label><br>
-            <input type="radio" name="animation" id="H">
-            <label for="walking">H</label><br>
-            <input type="radio" name="animation" id="I">
-            <label for="walking">I</label><br>
+            <label for="E">E</label><br>
         </div>
     </div>
 </body>
 
 <script>
-    // start on page load
-    window.addEventListener('load', function () {
+     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
         const SPRITE_WIDTH = 70;  // matches sprite pixel width
         const SPRITE_HEIGHT = 130; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
-        const FRAME_LIMIT = 6;  // number of frames per row, this code assume each row is same
-        // const FRAME_RATE = 15;  // not used
-        const FRAME_RATE = 30; // 30 frames per second
-        const DESIRED_FRAME_RATE = 8; // 1 frames per second
+        const DESIRED_FRAME_RATE = 3; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
-
+        const animationData = {
+            'A': {
+                frameLimit: 3,
+                x: 18, // X position for 'idle' animation
+                y: -1, // Y position for 'idle' animation
+            },
+            'B': {
+                frameLimit: 3,
+                x: 18, // X position for 'barking' animation
+                y: 2, // Y position for 'barking' animation
+            },
+            'C': {
+                frameLimit: 5,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            },
+            'D': {
+                frameLimit: 4,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            },
+            'E': {
+                frameLimit: 3,
+                x: 18, // X position for 'walking' animation
+                y: -1, // Y position for 'walking' animation
+            }
+        };
+          // number of frames per row, this code assumes each row is different
+        // const FRAME_RATE = 15;  // not used
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
-
-        class Ninja {
+        class test {
             constructor() {
-                this.image = document.getElementById("ninjaSprite");
+                this.image = document.getElementById("ZombieGal");
                 this.spriteWidth = SPRITE_WIDTH;
                 this.spriteHeight = SPRITE_HEIGHT;
                 this.width = this.spriteWidth;
@@ -65,12 +80,18 @@ type: hacks
                 this.y = 0;
                 this.scale = SCALE_FACTOR;
                 this.minFrame = 0;
-                this.maxFrame = FRAME_LIMIT;
-                this.frameX = 0;
                 this.frameY = 0;
+                this.frameX = 0;
+                this.maxFrame = 0;
             }
-
-            // draw dog object
+            setFrameLimit(limit) {
+                this.maxFrame = limit;
+            }
+            setPosition(x, y) {
+                this.x = x;
+                this.y = y;
+            }
+            // draw object
             draw(context) {
                 context.drawImage(
                     this.image,
@@ -84,7 +105,6 @@ type: hacks
                     this.height * this.scale
                 );
             }
-
             // update frameX of object
             update() {
                 if (this.frameX < this.maxFrame) {
@@ -94,41 +114,33 @@ type: hacks
                 }
             }
         }
-
-        // dog object
-        const ninja = new Ninja();
-
-        // update frameY of dog object, action from idle, bark, walk radio control
+        // object
+        const test = new Test();
+        // update frameY of object, action from idle, bark, walk, and other radio controls
         const controls = document.getElementById('controls');
         controls.addEventListener('click', function (event) {
             if (event.target.tagName === 'INPUT') {
                 const selectedAnimation = event.target.id;
+                const animationInfo = animationData[selectedAnimation];
+                if (animationInfo) {
+                    test.setFrameLimit(animationInfo.frameLimit);
+                    test.setPosition(animationInfo.x, animationInfo.y);
+                }
                 switch (selectedAnimation) {
                     case 'A':
-                        ninja.frameY = 0;
+                        test.frameY = 5;
                         break;
                     case 'B':
-                        ninja.frameY = 1;
+                        test.frameY = 0;
                         break;
                     case 'C':
-                        ninja.frameY = 2;
+                        test.frameY = 1;
                         break;
-                    case 'D':
-                        ninja.frameY = 3;
+                     case 'D':
+                        test.frameY = 2;
                         break;
-                    case 'E':
-                        ninja.frameY = 4;
-                        break;
-                    case 'F':
-                        ninja.frameY = 5;
-                        break;
-                    case 'G':
-                        ninja.frameY = 6;
-                        break;
-                    case 'H':
-
-
-                    default:
+                     case 'E':
+                        test.frameY = 3;
                         break;
                 }
             }
@@ -141,13 +153,11 @@ type: hacks
                 // Clears the canvas to remove the previous frame.
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 // Draws the current frame of the sprite.
-                ninja.draw(ctx);
-
+                test.draw(ctx);
                 // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
-                ninja.update();
-
-            // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
-            // ensuring smooth visuals.
+                test.update();
+                // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
+                // ensuring smooth visuals.
                 lastTimestamp = timestamp;
                 }
             requestAnimationFrame(animate);
