--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -14,7 +14,7 @@ type: hacks
             <img id="box" src="{{site.baseurl}}/images/box.png"> 
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
-            <input type="radio" name="animation" id="A">
+            <input type="radio" name="animation" id="A" checked>
             <label for="A">A</label><br>
             <input type="radio" name="animation" id="B">
             <label for="B">B</label><br>
@@ -30,7 +30,7 @@ type: hacks
         const SPRITE_WIDTH = 71.75;  // matches sprite pixel width
         const SPRITE_HEIGHT = 80.5; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 10; // 3 frames per second
+        const DESIRED_FRAME_RATE = 20; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
