--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -10,10 +10,10 @@ type: hacks
 
 <body>
     <div>
-        <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
+        <canvas id="spriteContainer">
             <img id="box" src="{{site.baseurl}}/images/box.png"> 
         </canvas>
-        <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
+        <div id="controls">
             <input type="radio" name="animation" id="A" checked>
             <label for="A">A</label><br>
             <input type="radio" name="animation" id="B">
@@ -27,23 +27,25 @@ type: hacks
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
-        const SPRITE_WIDTH = 71.75;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 80.5; // matches sprite pixel height
-        const SCALE_FACTOR = 2;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 20; // 3 frames per second
+        const SPRITE_WIDTH = 71.75;
+        const SPRITE_HEIGHT = 80.5;
+        const SCALE_FACTOR = 2;
+        const DESIRED_FRAME_RATE = 20;
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
                 frameLimit: 7,
-                x: 1, // X position for 'idle' animation
-                y: -20, // Y position for 'idle' animation
+                x: 1,
+                y: -20,
             },
             'B': {
                 frameLimit: 7,
-                x: 1, // X position for 'barking' animation
-                y: -20, // Y position for 'barking' animation
+                x: 1,
+                y: -20,
             }
         };
+        canvas.width = SPRITE_WIDTH * SCALE_FACTOR * 7;
+        canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
 
         class Iceman {
             constructor() {
@@ -59,6 +61,7 @@ type: hacks
                 this.frameY = 0;
                 this.frameX = 0;
                 this.maxFrame = 0;
+                this.speed = 5; // You can adjust the speed
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -67,7 +70,6 @@ type: hacks
                 this.x = x;
                 this.y = y;
             }
-            // draw dog object
             draw(context) {
                 context.drawImage(
                     this.image,
@@ -81,8 +83,6 @@ type: hacks
                     this.height * this.scale
                 );
             }
-
-            // update frameX of object
             update() {
                 if (this.frameX < this.maxFrame) {
                     this.frameX++;
@@ -92,10 +92,9 @@ type: hacks
             }
         }
 
-        // dog object
         const iceman = new Iceman();
 
-        // update frameY of dog object, action from idle, bark, walk radio control
+        // Update frameY of dog object, action from idle, bark, walk radio control
         const controls = document.getElementById('controls');
         controls.addEventListener('click', function (event) {
             if (event.target.tagName === 'INPUT') {
@@ -115,7 +114,26 @@ type: hacks
                 }
             }
         });
-        let lastTimestamp = 1;
+
+        // Arrow key event listeners
+        document.addEventListener('keydown', function (event) {
+            switch (event.key) {
+                case 'ArrowLeft':
+                    iceman.x -= iceman.speed;
+                    break;
+                case 'ArrowRight':
+                    iceman.x += iceman.speed;
+                    break;
+                case 'ArrowUp':
+                    iceman.y -= iceman.speed;
+                    break;
+                case 'ArrowDown':
+                    iceman.y += iceman.speed;
+                    break;
+            }
+        });
+
+        let lastTimestamp = 0;
         // Animation recursive control function
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
@@ -128,12 +146,13 @@ type: hacks
                 // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
                 iceman.update();
 
-            // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
-            // ensuring smooth visuals.
+                // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
+                // ensuring smooth visuals.
                 lastTimestamp = timestamp;
-                }
+            }
             requestAnimationFrame(animate);
         }
+
         // run 1st animate
         animate();
     });
