iceman animation works

--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -3,7 +3,7 @@ toc: true
 comments: true
 layout: post
 title: Box Animation
-description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.
+description: ewsrdtfyguhijok
 courses: { compsci: {week: 1} }
 type: hacks
 ---
