--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -2,7 +2,7 @@
 toc: true
 comments: true
 layout: post
-title: Box Animation moving across screen
+title: Pinky!
 description:  Example!!! This sample shows markdown cell, markdown table, markdown code fencing, and code cells.
 courses: { compsci: {week: 0} }
 type: hacks
@@ -33,7 +33,7 @@ type: hacks
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
-        const SPRITE_WIDTH = 74;  // matches sprite pixel width
+        const SPRITE_WIDTH = 70;  // matches sprite pixel width
         const SPRITE_HEIGHT = 64; // matches sprite pixel height
         const SCALE_FACTOR = 3;  // control size of sprite on canvas
         const FRAME_LIMIT = 3;  // number of frames per row, this code assume each row is same 
