--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -13,7 +13,7 @@ type: hacks
         <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
             <img id="pinky" src="{{site.baseurl}}/images/pinky.png"> 
         </canvas>
-        <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
+        <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animation works -->
             <input type="radio" name="animation" id="A" checked>
             <label for="A">A</label><br>
             <input type="radio" name="animation" id="B" checked>
@@ -34,12 +34,12 @@ type: hacks
         const SPRITE_WIDTH = 70;  // matches sprite pixel width
         const SPRITE_HEIGHT = 70; // matches sprite pixel height
         const SCALE_FACTOR = 3;  // control size of sprite on canvas
-         const DESIRED_FRAME_RATE = 3; // 3 frames per second
+        const DESIRED_FRAME_RATE = 3; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
                 frameLimit: 3,
-                x: 18, // X position for 'idle' animation
+                x: 16, // X position for 'idle' animation
                 y: -2, // Y position for 'idle' animation
             },
             'B': {
@@ -58,11 +58,11 @@ type: hacks
                 y: -2, // Y position for 'walking' animation
             }
         };
-          // number of frames per row, this code assumes each row is different
+        // number of frames per row, this code assumes each row is different
         // const FRAME_RATE = 15;  // not used
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
-        class pinky {
+        class Pinky {
             constructor() {
                 this.image = document.getElementById("pinky");
                 this.spriteWidth = SPRITE_WIDTH;
@@ -129,7 +129,7 @@ type: hacks
                     case 'C':
                         pinky.frameY = 2;
                         break;
-                     case 'D':
+                    case 'D':
                         pinky.frameY = 3;
                         break;
                 }
@@ -149,7 +149,7 @@ type: hacks
                 // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
                 // ensuring smooth visuals.
                 lastTimestamp = timestamp;
-                }
+            }
             requestAnimationFrame(animate);
         }
         // run 1st animate
