--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -34,22 +34,22 @@ type: hacks
         const SPRITE_WIDTH = 70;  // matches sprite pixel width
         const SPRITE_HEIGHT = 70; // matches sprite pixel height
         const SCALE_FACTOR = 3;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 3; // 3 frames per second
+        const DESIRED_FRAME_RATE = 15; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             'A': {
                 frameLimit: 3,
-                x: 16, // X position for 'idle' animation
+                x: 5, // X position for 'idle' animation
                 y: -2, // Y position for 'idle' animation
             },
             'B': {
                 frameLimit: 8,
-                x: 18, // X position for 'barking' animation
+                x: 10, // X position for 'barking' animation
                 y: -2, // Y position for 'barking' animation
             },
             'C': {
                 frameLimit: 5,
-                x: 18, // X position for 'walking' animation
+                x: 30, // X position for 'walking' animation
                 y: -2, // Y position for 'walking' animation
             },
             'D': {
@@ -155,4 +155,14 @@ type: hacks
         // run 1st animate
         animate();
     });
+
 </script>
+
+
+
+
+
+
+## Backstory
+
+Once upon a time in the cozy quiet town called Parcelia, there was a small pink blob named Pinky!  Pinky was a peaceful villager that lived a simple happy life.  One special day Pinky was waiting by the post office for a package from his sister who lived on another planet.  This was the first time in five years that he would hear from her because of the long distance.  As the package arived before him a group of bullies came and smashed it to bits!  Pinky was devistated.  This marked the start of Pinkys journey of destruction.  Pinky changed his name to strawberry squishier, and vowed to squish any package that left the post office, now and forever. Now strawberry squisher walks by the post office every morning squashing any and all packages that cross his path!
