box jumpy but bad

--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -28,22 +28,11 @@ type: hacks
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
         const SPRITE_WIDTH = 71.75;
-        const SPRITE_HEIGHT = 80.5;
+        const SPRITE_HEIGHT = 82.5;
         const SCALE_FACTOR = 2;
-        const DESIRED_FRAME_RATE = 20;
+        const DESIRED_FRAME_RATE = 15;
+        const FRAME_LIMIT = 7;  // number of frames per row, this code assumes each row is the same
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
-        const animationData = {
-            'A': {
-                frameLimit: 7,
-                x: 1,
-                y: -20,
-            },
-            'B': {
-                frameLimit: 7,
-                x: 1,
-                y: -20,
-            }
-        };
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR * 7;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
 
@@ -60,7 +49,7 @@ type: hacks
                 this.minFrame = 0;
                 this.frameY = 0;
                 this.frameX = 0;
-                this.maxFrame = 0;
+                this.maxFrame = 7;
                 this.speed = 5; // You can adjust the speed
             }
             setFrameLimit(limit) {
@@ -95,25 +84,20 @@ type: hacks
         const iceman = new Iceman();
 
         // Update frameY of dog object, action from idle, bark, walk radio control
-        const controls = document.getElementById('controls');
-        controls.addEventListener('click', function (event) {
-            if (event.target.tagName === 'INPUT') {
-                const selectedAnimation = event.target.id;
-                const animationInfo = animationData[selectedAnimation];
-                if (animationInfo) {
-                    iceman.setFrameLimit(animationInfo.frameLimit);
-                    iceman.setPosition(animationInfo.x, animationInfo.y);
+            const controls = document.getElementById('controls');
+            controls.addEventListener('click', function (event) {
+                if (event.target.tagName === 'INPUT') {
+                    const selectedAnimation = event.target.id;
+                    switch (selectedAnimation) {
+                        case 'A':
+                            iceman.frameY = 0;
+                            break;
+                        case 'B':
+                            iceman.frameY = 1;
+                            break;
+                    }
                 }
-                switch (selectedAnimation) {
-                    case 'A':
-                        iceman.frameY = 0;
-                        break;
-                    case 'B':
-                        iceman.frameY = 1;
-                        break;
-                }
-            }
-        });
+            });
 
         // Arrow key event listeners
         document.addEventListener('keydown', function (event) {
@@ -125,12 +109,19 @@ type: hacks
                     iceman.x += iceman.speed;
                     break;
                 case 'ArrowUp':
-                    iceman.y -= iceman.speed;
+                    iceman.x += iceman.speed;
+                // Set the animation to 'B'
+                    const selectedAnimation = 'B';
+                    iceman.frameY = 1; // Set frameY to '1' for the 'B' animation
+
+            // Delay for a few milliseconds (e.g., 500ms)
+                setTimeout(function() {
+                // After the delay, switch back to 'A'
+                        const selectedAnimation = 'A';
+                        iceman.frameY = 0;
+                    }, 400); // Adjust the delay in milliseconds as needed
                     break;
-                case 'ArrowDown':
-                    iceman.y += iceman.speed;
-                    break;
-            }
+                }
         });
 
         let lastTimestamp = 0;
