--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -37,39 +37,28 @@ type: hacks
         const DESIRED_FRAME_RATE = 15; // 3 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
-            'A': {
-                frameLimit: 3,
-                x: 0, // X position for 'idle' animation
-                y: 0, // Y position for 'idle' animation
-            },
-            'B': {
-                frameLimit: 8,
-<<<<<<< HEAD
-                x: 0, // X position for 'barking' animation
-                y: 0, // Y position for 'barking' animation
-=======
-                x: 30, // X position for 'barking' animation
-                y: -15, // Y position for 'barking' animation
->>>>>>> 640d9bda4894946621775f7643d6c82efd373fc1
-            },
-            'C': {
-                frameLimit: 5,
-                x: 0, // X position for 'walking' animation
-                y: 0, // Y position for 'walking' animation
-            },
-            'D': {
-                frameLimit: 3,
-<<<<<<< HEAD
-                x: 0, // X position for 'walking' animation
-                y: 0 // Y position for 'walking' animation
-=======
-                x: 18, // X position for 'walking' animation
-                y: -15 // Y position for 'walking' animation
-                x: 5, // X position for 'barking' animation
-                y: -2, // Y position for 'barking' animation
->>>>>>> 640d9bda4894946621775f7643d6c82efd373fc1
-            }
-        };
+            A: {
+            frameLimit: 3,
+            width: 71,
+            height: 72
+        },
+            B: {
+            frameLimit: 8,
+            width: 79.5,
+            height: 72
+        },
+            C: {
+            frameLimit: 5,
+            width: 76,
+            height: 73
+        },
+            D: {
+            frameLimit: 3,
+            width: 76,
+            height: 72
+        }
+};
+
         // number of frames per row, this code assumes each row is different
         // const FRAME_RATE = 15;  // not used
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
@@ -95,6 +84,11 @@ type: hacks
             setPosition(x, y) {
                 this.x = x;
                 this.y = y;
+            }
+
+            setSize(width, height){
+                this.spriteWidth = width;
+                this.spriteHeight = height;
             }
             // draw object
             draw(context) {
@@ -129,7 +123,7 @@ type: hacks
                 const animationInfo = animationData[selectedAnimation];
                 if (animationInfo) {
                     pinky.setFrameLimit(animationInfo.frameLimit);
-                    pinky.setPosition(animationInfo.x, animationInfo.y);
+                    pinky.setSize(animationInfo.width, animationInfo.height);
                 }
                 switch (selectedAnimation) {
                     case 'A':
