--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -13,12 +13,6 @@ type: hacks
         <canvas id="spriteContainer">
             <img id="box" src="{{site.baseurl}}/images/box.png"> 
         </canvas>
-        <div id="controls">
-            <input type="radio" name="animation" id="A" checked>
-            <label for="A">A</label><br>
-            <input type="radio" name="animation" id="B">
-            <label for="B">B</label><br>
-        </div>
     </div>
 </body>
 
@@ -31,12 +25,11 @@ type: hacks
         const SPRITE_HEIGHT = 82.5;
         const SCALE_FACTOR = 2;
         const DESIRED_FRAME_RATE = 15;
-        const FRAME_LIMIT = 7;  // number of frames per row, this code assumes each row is the same
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR * 7;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
 
-        class Iceman {
+        class Box {
             constructor() {
                 this.image = document.getElementById("box");
                 this.spriteWidth = SPRITE_WIDTH;
@@ -50,7 +43,7 @@ type: hacks
                 this.frameY = 0;
                 this.frameX = 0;
                 this.maxFrame = 7;
-                this.speed = 5; // You can adjust the speed
+                this.speed = 10; // You can adjust the speed
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -81,61 +74,73 @@ type: hacks
             }
         }
 
-        const iceman = new Iceman();
+        const box = new Box();
+        
+        const keyState = {
+            ArrowLeft: false,
+            ArrowRight: false,
+            ArrowUp: false,
+        };
 
-        // Update frameY of dog object, action from idle, bark, walk radio control
-            const controls = document.getElementById('controls');
-            controls.addEventListener('click', function (event) {
-                if (event.target.tagName === 'INPUT') {
-                    const selectedAnimation = event.target.id;
-                    switch (selectedAnimation) {
-                        case 'A':
-                            iceman.frameY = 0;
-                            break;
-                        case 'B':
-                            iceman.frameY = 1;
-                            break;
-                    }
-                }
-            });
-
-        // Arrow key event listeners
         document.addEventListener('keydown', function (event) {
             switch (event.key) {
                 case 'ArrowLeft':
-                    iceman.x -= iceman.speed;
+                    keyState.ArrowLeft = true;
                     break;
                 case 'ArrowRight':
-                    iceman.x += iceman.speed;
+                    keyState.ArrowRight = true;
                     break;
                 case 'ArrowUp':
-                    iceman.x += iceman.speed;
-                // Set the animation to 'B'
-                    const selectedAnimation = 'B';
-                    iceman.frameY = 1; // Set frameY to '1' for the 'B' animation
-
-            // Delay for a few milliseconds (e.g., 500ms)
-                setTimeout(function() {
-                // After the delay, switch back to 'A'
-                        const selectedAnimation = 'A';
-                        iceman.frameY = 0;
-                    }, 400); // Adjust the delay in milliseconds as needed
+                    keyState.ArrowUp = true;
                     break;
-                }
+            }
         });
 
+        document.addEventListener('keyup', function (event) {
+            switch (event.key) {
+                case 'ArrowLeft':
+                    keyState.ArrowLeft = false;
+                    break;
+                case 'ArrowRight':
+                    keyState.ArrowRight = false;
+                    break;
+                case 'ArrowUp':
+                    keyState.ArrowUp = false;
+                    break;
+            }
+        });
+
+        // Check key states and update animations in your animation loop
+        function updateAnimations() {
+            let selectedAnimation = 'A';  // Set a default animation
+            box.frameY = 0;
+            if (keyState.ArrowLeft) {
+                box.x -= box.speed;
+            }
+            if (keyState.ArrowRight) {
+                box.x += box.speed;
+            }
+            if (keyState.ArrowUp) {
+                selectedAnimation = 'B';
+                box.frameY = 1;
+            } 
+            // Use `selectedAnimation` to update animations or other logic.
+        }
+
+
         let lastTimestamp = 0;
-        // Animation recursive control function
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
             if (deltaTime >= FRAME_INTERVAL) {
                 // Clears the canvas to remove the previous frame.
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
                 // Draws the current frame of the sprite.
-                iceman.draw(ctx);
+                box.draw(ctx);
 
-                // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
-                iceman.update();
+                box.update();
+
+                // Update animations based on key states
+                updateAnimations();
 
                 // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
                 // ensuring smooth visuals.
@@ -143,6 +148,7 @@ type: hacks
             }
             requestAnimationFrame(animate);
         }
+
 
         // run 1st animate
         animate();
