--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -3,7 +3,7 @@ toc: true
 comments: true
 layout: post
 title: Box Animation
-description: ewsrdtfyguhijok
+description: complete
 courses: { compsci: {week: 1} }
 type: hacks
 ---
@@ -17,7 +17,7 @@ type: hacks
 </body>
 
 <script>
-    
+
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
