box sprite +  strawberry squisher

--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -3,7 +3,7 @@ toc: true
 comments: true
 layout: post
 title: Pinky!
-description:  pinky strawberry squisher yippe
+description: pinky strawberry squisher yippe
 courses: { compsci: {week: 0} }
 type: hacks
 ---
@@ -38,30 +38,30 @@ type: hacks
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
         const animationData = {
             A: {
-            frameLimit: 3,
-            width: 71,
-            height: 72
-        },
+                frameLimit: 3,
+                width: 71,
+                height: 72
+            },
             B: {
-            frameLimit: 8,
-            width: 79.5,
-            height: 72
-        },
+                frameLimit: 8,
+                width: 79.5,
+                height: 72
+            },
             C: {
-            frameLimit: 5,
-            width: 76,
-            height: 73
-        },
+                frameLimit: 5,
+                width: 76,
+                height: 73
+            },
             D: {
-            frameLimit: 3,
-            width: 76,
-            height: 72
-        }
-};
-        // number of frames per row, this code assumes each row is different
-        // const FRAME_RATE = 15;  // not used
-        canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
+                frameLimit: 3,
+                width: 76,
+                height: 72
+            }
+        };
+        
+        canvas.width = 1000;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
+
         class Pinky {
             constructor() {
                 this.image = document.getElementById("pinky");
@@ -76,20 +76,25 @@ type: hacks
                 this.frameY = 0;
                 this.frameX = 0;
                 this.maxFrame = 0;
+                
+                // Increase this value to make the sprite move faster to the left
+                this.speed = -10;  // Adjust this value for the desired speed
             }
+
             setFrameLimit(limit) {
                 this.maxFrame = limit;
             }
+
             setPosition(x, y) {
                 this.x = x;
                 this.y = y;
             }
 
-            setSize(width, height){
+            setSize(width, height) {
                 this.spriteWidth = width;
                 this.spriteHeight = height;
             }
-            // draw object
+
             draw(context) {
                 context.drawImage(
                     this.image,
@@ -103,18 +108,24 @@ type: hacks
                     this.height * this.scale
                 );
             }
-            // update frameX of object
+
             update() {
                 if (this.frameX < this.maxFrame) {
                     this.frameX++;
                 } else {
                     this.frameX = 0;
                 }
+
+                this.x += this.speed;
+
+                if (this.x + this.spriteWidth * this.scale < 0) {
+                    this.x = canvas.width;
+                }
             }
         }
-        // object
+
         const pinky = new Pinky();
-        // update frameY of object, action from idle, bark, walk, and other radio controls
+
         const controls = document.getElementById('controls');
         controls.addEventListener('click', function (event) {
             if (event.target.tagName === 'INPUT') {
@@ -140,32 +151,23 @@ type: hacks
                 }
             }
         });
+
         let lastTimestamp = 0;
-        // Animation recursive control function
+
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
             if (deltaTime >= FRAME_INTERVAL) {
-                // Clears the canvas to remove the previous frame.
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
-                // Draws the current frame of the sprite.
                 pinky.draw(ctx);
-                // Updates the `frameX` property to prepare for the next frame in the sprite sheet.
                 pinky.update();
-                // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
-                // ensuring smooth visuals.
                 lastTimestamp = timestamp;
             }
             requestAnimationFrame(animate);
         }
-        // run 1st animate
+
         animate();
     });
-
 </script>
-
-
-
-
 
 
 ## Backstory
