--- a/_posts/2023-10-18-boxBreak.md
+++ b/_posts/2023-10-18-boxBreak.md
@@ -11,7 +11,7 @@ courses: { compsci: {week: 2} }
 <body>
     <div>
         <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
-            <img id="box" src="{{site.baseurl}}/images/spriteCat.png"> 
+            <img id="box" src="{{site.baseurl}}/images/boxObject.png"> 
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
             <input type="radio" name="animation" id="default" checked>
@@ -25,12 +25,12 @@ courses: { compsci: {week: 2} }
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
-        const SPRITE_WIDTH = 32;  // matches sprite pixel width
-        const SPRITE_HEIGHT = 32; // matches sprite pixel height
-        const FRAME_LIMIT = 3; // matches number of frames per sprite row, this code assume each row is same
+        const SPRITE_WIDTH = 102.3;  // matches sprite pixel width
+        const SPRITE_HEIGHT = 115; // matches sprite pixel height
+        const FRAME_LIMIT = 5; // matches number of frames per sprite row, this code assume each row is same
        // const FRAME_RATE = 4;  // Change this value to adjust the frame rate (frames per second)
         const SCALE_FACTOR = 3;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 7; // 1 frames per second
+        const DESIRED_FRAME_RATE = 6; // 1 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
 
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
@@ -38,7 +38,7 @@ courses: { compsci: {week: 2} }
 
         class Cat {
             constructor() {
-                this.image = document.getElementById("catSprite");
+                this.image = document.getElementById("box");
                 this.x = 0;
                 this.y = 0;
                 this.minFrame = 0;
