--- a/_posts/2023-10-18-boxBreak.md
+++ b/_posts/2023-10-18-boxBreak.md
@@ -11,11 +11,11 @@ courses: { compsci: {week: 2} }
 <body>
     <div>
         <canvas id="spriteContainer"> <!-- Within the base div is a canvas. An HTML canvas is used only for graphics. It allows the user to access some basic functions related to the image created on the canvas (including animation) -->
-            <img id="box" src="{{site.baseurl}}/images/boxObject.png"> 
+            <img id="box" src="{{site.baseurl}}/images/boxBreak.png"> 
         </canvas>
         <div id="controls"> <!--basic radio buttons which can be used to check whether each individual animaiton works -->
             <input type="radio" name="animation" id="default" checked>
-            <label for="idle">Idle</label><br>
+            <label for="default">default</label><br>
         </div>
     </div>
 </body>
@@ -30,7 +30,7 @@ courses: { compsci: {week: 2} }
         const FRAME_LIMIT = 5; // matches number of frames per sprite row, this code assume each row is same
        // const FRAME_RATE = 4;  // Change this value to adjust the frame rate (frames per second)
         const SCALE_FACTOR = 3;  // control size of sprite on canvas
-        const DESIRED_FRAME_RATE = 6; // 1 frames per second
+        const DESIRED_FRAME_RATE = 4; // 1 frames per second
         const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
 
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
