--- a/_posts/2023-10-20-icyboi.md
+++ b/_posts/2023-10-20-icyboi.md
@@ -5,7 +5,7 @@ layout: post
 title: Icy Boi brr
 description: in progress
 type: hacks
-courses: { compsci: {week: 3} }
+courses: { compsci: {week: 1} }
 ---
 
 <body>
@@ -23,7 +23,7 @@ courses: { compsci: {week: 3} }
         const SPRITE_WIDTH = 52.54;  // matches sprite pixel width
         const SPRITE_HEIGHT = 95; // matches sprite pixel height
         const SCALE_FACTOR = 2;  // control size of sprite on canvas
-        const FRAME_LIMIT = 22;  // number of frames per row, this code assume each row is the same
+        const FRAME_LIMIT = 22;  // number of frames per row, this code assumes each row is the same
 
         canvas.width = SPRITE_WIDTH * SCALE_FACTOR * 8;
         canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
@@ -51,9 +51,10 @@ courses: { compsci: {week: 3} }
                     this.frameX = 0;
                     this.frameY = 0;
                     this.velocityX = -7; // Negative value to move from right to left
-                    this.appearInterval = 1000; // Initial appearance interval of 3 seconds
+                    this.appearInterval = 1000; // Reappear every 1 second
+                    this.disappearInterval = 500; // Disappear every 0.5 seconds
                     this.lastAppearTime = 0;
-                    this.visible = true; // A flag to control sprite visibility
+                    this.visible = true; // Start with the sprite visible
                 }
 
                 // Draw the Iceman object
@@ -67,7 +68,7 @@ courses: { compsci: {week: 3} }
                             this.spriteHeight,
                             this.x,
                             this.y,
-                            this.width * this.scale,
+                            this.width * this scale,
                             this.height * this.scale
                         );
                     }
@@ -84,16 +85,19 @@ courses: { compsci: {week: 3} }
                     // Update x position for horizontal movement
                     this.x += this.velocityX;
 
-                    // Reset x position if it goes beyond the canvas
-                    if (this.x > canvas.width) {
-                        this.x = -this.width * this.scale;
-                    }
-
                     // Check if it's time to make the sprite disappear
                     const currentTime = Date.now();
-                    if (currentTime - this.lastAppearTime >= this.appearInterval) {
+                    if (currentTime - this.lastAppearTime >= this.visible ? this.appearInterval : this.disappearInterval) {
                         this.visible = !this.visible; // Toggle sprite visibility
+                        if (this.visible) {
+                            this.x = canvas.width; // Reset the x position when the sprite reappears
+                        }
                         this.lastAppearTime = currentTime; // Update the last appearance time
+                    }
+
+                    // When the sprite goes beyond the left edge, reset it to the right edge
+                    if (this.x < -this.width * this.scale) {
+                        this.x = canvas.width;
                     }
                 }
             }
