--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -5,7 +5,7 @@ layout: post
 title: Box Animation
 description: complete
 courses: { compsci: {week: 1} }
-type: hacks
+type: sprites
 ---
 
 <body>
