--- a/_posts/2023-10-13-Pinky.md
+++ b/_posts/2023-10-13-Pinky.md
@@ -5,7 +5,7 @@ layout: post
 title: Pinky!
 description: pinky strawberry squisher yippe
 courses: { compsci: {week: 0} }
-type: hacks
+type: sprites
 ---
 
 <body>
