--- a/_posts/2023-10-18-boxBreak.md
+++ b/_posts/2023-10-18-boxBreak.md
@@ -4,7 +4,7 @@ comments: false
 layout: post
 title: box break :O
 description: idk
-type: hacks
+type: sprites
 courses: { compsci: {week: 2} }
 ---
 
