--- a/_posts/2023-09-10-Iceman.md
+++ b/_posts/2023-09-10-Iceman.md
@@ -4,7 +4,7 @@ comments: false
 layout: post
 title: Iceman Animation
 description: in progress
-type: sprites
+type: hacks
 courses: { compsci: {week: 4} }
 ---
 
