--- a/_posts/2023-09-10-homepage.md
+++ b/_posts/2023-09-10-homepage.md
@@ -24,17 +24,17 @@ courses: { compsci: {week: 1} }
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(50%, -100%);
+        transform: translate(50%, -50%);
         text-align: center;
         color: white;
     }
     #title {
         font-family: 'Helvetica', sans-serif;
         font-size: 100px;
-        color: brown; 
+        color: orange; 
     }
     .button {
-        background-color: orange;
+        background-color: #CD5C5C;
         border: 2px solid white;
         color: white;
         padding: 10px 20px;
@@ -52,7 +52,7 @@ courses: { compsci: {week: 1} }
 <canvas id="BackyRoundyCanvas"></canvas>
 
 <div id="game-container">
-    <h1 id="title">Deliveries!</h1>
+    <h1 id="title">DELIVERIES!</h1>
     <button class="button" onclick="startGame('easy')">Easy</button>
     <br>
     <button class="button" onclick="startGame('medium')">Medium</button>
@@ -69,7 +69,7 @@ courses: { compsci: {week: 1} }
     
     backgroundImg.onload = function () {
         const WIDTH = 1280; // Constant width
-        const HEIGHT = 1000; // Constant height
+        const HEIGHT = 670; // Constant height
         const ASPECT_RATIO = WIDTH / HEIGHT;
 
         const canvasWidth = window.innerWidth;
