--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -192,8 +192,8 @@ window.addEventListener('load', function () {
     const SCALE_FACTOR = 0.25;
     const FRAME_LIMIT = 4;
 
-    canvas.width = SPRITE_WIDTH * SCALE_FACTOR;
-    canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
+    canvas.width = SPRITE_WIDTH * SCALE_FACTOR*5;
+    canvas.height = SPRITE_HEIGHT * SCALE_FACTOR*3;
 
     const platformImage = new Image();
     platformImage.src = "{{site.baseurl}}/images/platform.png";
