--- a/_posts/2023-09-10-homepage.md
+++ b/_posts/2023-09-10-homepage.md
@@ -130,8 +130,27 @@ courses: { compsci: {week: 1} }
     };
 
     function easy() {
-        
+        // Change the background image for "Easy" difficulty
+        backgroundImg.src = '{{site.baseurl}}/images/pinkyPage.png';
+
+        // Remove the "Easy" button
+        document.querySelector('.button').style.display = 'none';
+
+        // Create and display the "Start" button
+        const startButton = document.createElement('button');
+        startButton.className = 'button';
+        startButton.textContent = 'Start';
+        startButton.onclick = function () {
+            startGame('easy');
+        };
+
+        document.getElementById('game-container').appendChild(startButton);
     }
+        function startGame(difficulty) {
+            // Add code to start the game based on the selected difficulty
+            console.log(`Starting game with difficulty: ${difficulty}`);
+            // Call your other functions or game logic here
+        }
 
     
 </script>
