--- a/_posts/2023-10-25-mainPage.md
+++ b/_posts/2023-10-25-mainPage.md
@@ -60,14 +60,13 @@ courses: { compsci: {week: 1} }
 <!-- PINKY CHARECTER PAGE --> 
 <div id="game-container">
     <h1 id="title">DELIVERIES!</h1>
-    <button class="button" onclick="easy()">Easy</button>
-    <!--
+    <button id="button1" class="button" onclick="easy()">Easy</button>
     <br>
-    <button class="button" onclick="startGame('medium')">Medium</button>
+    <button id="button2" class="button" onclick="medium()">Medium</button>
     <br>
-    <button class="button" onclick="startGame('hard')">Hard</button>
+    <button id="button3" class="button" onclick="hard()">Hard</button>
 </div>
--->
+
 
 <script>
     const canvas = document.getElementById("BackyRoundyCanvas");
@@ -150,7 +149,9 @@ courses: { compsci: {week: 1} }
         canvas.style.height = `${newCanvasHeight}px`;
 
         // Remove the "Easy" button
-        document.querySelector('.button').style.display = 'none';
+        document.querySelector('#button1').style.display = 'none';
+        document.querySelector('#button2').style.display = 'none';
+        document.querySelector('#button3').style.display = 'none';
 
         // Remove Title
         document.getElementById('title').style.display = 'none';
@@ -175,5 +176,99 @@ courses: { compsci: {week: 1} }
         console.log(`Starting game with difficulty: ${difficulty}`);
         // Call your other functions or game logic here
     }
+
+    function medium() {
+        // Change the background image for "Easy" difficulty
+        backgroundImg.src = '{{site.baseurl}}/images/midnightStalker_characterCard.png';
+
+        // Adjust canvas width and height
+        const newCanvasWidth = 726; // set your desired width
+        const newCanvasHeight = 403; // set your desired height
+
+        // Stop the background animation
+        animateBackground = false;
+
+        // Resize and position the canvas
+        canvas.width = newCanvasWidth;
+        canvas.height = newCanvasHeight;
+        canvas.style.width = `${newCanvasWidth}px`;
+        canvas.style.height = `${newCanvasHeight}px`;
+
+        // Remove the "Easy" button
+        document.querySelector('#button1').style.display = 'none';
+        document.querySelector('#button2').style.display = 'none';
+        document.querySelector('#button3').style.display = 'none';
+
+        // Remove Title
+        document.getElementById('title').style.display = 'none';
+
+        // Create and display the "Start" button
+        const startButton = document.createElement('button');
+        startButton.className = 'button';
+        startButton.textContent = 'Start';
+        startButton.style.backgroundColor = "black"
+        startButton.style.position = 'absolute'; // Set button position to absolute
+        startButton.style.top = '90%'; // Set top position in percentage
+        startButton.style.left = '50%'; // Set left position in percentage
+        startButton.style.transform = 'translate(80%, 250%)'; // Center the button
+        startButton.onclick = function () {
+            startGame('medium');
+    };
+
+        document.getElementById('game-container').appendChild(startButton);
+    }
+
+    function startGame(difficulty) {
+        // Add code to start the game based on the selected difficulty
+        console.log(`Starting game with difficulty: ${difficulty}`);
+        // Call your other functions or game logic here
+    } 
+    function hard() {
+        // Change the background image for "Easy" difficulty
+        backgroundImg.src = '{{site.baseurl}}/images/iceman-charecterCard.png';
+
+        // Adjust canvas width and height
+        const newCanvasWidth = 725; // set your desired width
+        const newCanvasHeight = 403; // set your desired height
+
+        // Stop the background animation
+        animateBackground = false;
+
+        // Resize and position the canvas
+        canvas.width = newCanvasWidth;
+        canvas.height = newCanvasHeight;
+        canvas.style.width = `${newCanvasWidth}px`;
+        canvas.style.height = `${newCanvasHeight}px`;
+
+        // Remove the "Easy" button
+        document.querySelector('#button1').style.display = 'none';
+        document.querySelector('#button2').style.display = 'none';
+        document.querySelector('#button3').style.display = 'none';
+
+        // Remove Title
+        document.getElementById('title').style.display = 'none';
+
+        // Create and display the "Start" button
+        const startButton = document.createElement('button');
+        startButton.className = 'button';
+        startButton.textContent = 'Start';
+        startButton.style.backgroundColor = "blue"
+        startButton.style.position = 'absolute'; // Set button position to absolute
+        startButton.style.top = '90%'; // Set top position in percentage
+        startButton.style.left = '50%'; // Set left position in percentage
+        startButton.style.transform = 'translate(80%, 250%)'; // Center the button
+        startButton.onclick = function () {
+            startGame('hard');
+    };
+
+        document.getElementById('game-container').appendChild(startButton);
+    }
+
+    function startGame(difficulty) {
+        // Add code to start the game based on the selected difficulty
+        console.log(`Starting game with difficulty: ${difficulty}`);
+    }
+
+    
 </script>
     
